--- a/index.html
+++ b/index.html
@@ -139,11 +139,7 @@
                     necesidad.
                     Contamos con consultorios médicos y quirófanos equipados con tecnología de avanzada para
                     ofrecer
-                    atención de alta complejidad a niños y adultos. Nos encontramos ubicados en Av. Triunvirato
-                    en
-                    el
-                    barrio Villa Ortúzar, Capital Federal y contamos con todas las comodidades para los
-                    pacientes.
+                    atención de alta complejidad a niños y adultos. 
                 </p>
                 <p>
                     Nuestros valores son excelencia y profesionalidad en lo que hacemos, para lo cual nos
@@ -157,17 +153,15 @@
                 </p>
 
                 <p>
-                    MISIÓN: Brindar servicios médico – oftalmológicos de manera personalizada, procurando que
-                    nuestros
-                    pacientes reciban los beneficios de la tecnología y el conocimiento médico moderno sin
-                    importar
-                    su
-                    condición socioeconómica o su grado de marginación social; y contribuir así, a su bienestar
-                    y al
-                    desarrollo de México.
+                    <span class="spaninfo">MISIÓN</span> <br>
+                     Brindar servicios médico oftalmológicos de manera personalizada, procurando que
+                    nuestros pacientes reciban los beneficios de la tecnología y el conocimiento médico moderno sin
+                    importar su condición socioeconómica o su grado de marginación social; y contribuir así, a su bienestar
+                    y al desarrollo de Argentina.  <br>
                     <br>
-                    VISIÓN: Ser la Institución líder en asistencia, docencia, investigación y rehabilitación de
-                    enfermedades oftalmológicas en México y en Latinoamérica.
+                    <span class="spaninfo">VISIÓN</span>
+                    <br> Ser la Institución líder en asistencia, docencia, investigación y rehabilitación de
+                    enfermedades oftalmológicas en Argentina y en Latinoamérica.
                 </p>
 
             </div>
@@ -202,7 +196,9 @@
                     familiares, socios, colaboradores y demás partes interesadas. </p>
 
 
-                <p> La Institución está preparada para atender las necesidades oftalmológicas prioritarias de
+                <p> <span class="spaninfo">NECESIDADES OFTALMOLÓGICAS</span>
+                    <br>
+                    La Institución está preparada para atender las necesidades oftalmológicas prioritarias de
                     los
                     usuarios tales como: heridas oculares, glaucoma agudo, desprendimiento de retina,
                     endoftalmitis,
