--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -124,8 +124,11 @@
     <footer>
 
         <div class="bloqueFooter">
-            <div class="bloqueFooter__logo">
-                <img src="../Images/Logo.png" alt="Logofooter" loading="lazy">
+            <div  class="bloqueFooter__logo">
+                <a href="/index.html">
+                    <img src="../Images/Logo.png" alt="Logofooter" loading="lazy">
+                </a>
+    
             </div>
 
             <div class="bloqueFooter__contacto">
