--- a/Pages/obrasSociales.html
+++ b/Pages/obrasSociales.html
@@ -160,7 +160,9 @@
 
         <div class="bloqueFooter">
             <div class="bloqueFooter__logo">
+                <a href="/index.html">
                 <img src="../Images/Logo.png" alt="Logofooter">
+            </a>
             </div>
 
             <div class="bloqueFooter__contacto">
