--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -202,7 +202,9 @@
 
         <div class="bloqueFooter">
             <div class="bloqueFooter__logo">
+                <a href="/index.html">
                 <img src="../Images/Logo.png" alt="Logofooter" loading="lazy">
+            </a>
             </div>
 
             <div class="bloqueFooter__contacto">
