--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 
                         <img srcset="../Images/Movil/Slider1M.png 768w,
                         ../Images/Tablet/Slider1T.png 1024w,
-                        ../Images/Desktop/Slider1D.png 1025w" class="d-block w-100" alt="lente de medida oftalmológico">
+                        ../Images/Desktop/Slider1D.png 1025w" class="d-block w-100"
+                            alt="lente de medida oftalmológico">
 
                         <div class="carouselFilter"></div>
                         <div class="carouselInfo">
@@ -139,7 +140,7 @@
                     necesidad.
                     Contamos con consultorios médicos y quirófanos equipados con tecnología de avanzada para
                     ofrecer
-                    atención de alta complejidad a niños y adultos. 
+                    atención de alta complejidad a niños y adultos.
                 </p>
                 <p>
                     Nuestros valores son excelencia y profesionalidad en lo que hacemos, para lo cual nos
@@ -154,10 +155,11 @@
 
                 <p>
                     <span class="spaninfo">MISIÓN</span> <br>
-                     Brindar servicios médico oftalmológicos de manera personalizada, procurando que
+                    Brindar servicios médico oftalmológicos de manera personalizada, procurando que
                     nuestros pacientes reciban los beneficios de la tecnología y el conocimiento médico moderno sin
-                    importar su condición socioeconómica o su grado de marginación social; y contribuir así, a su bienestar
-                    y al desarrollo de Argentina.  <br>
+                    importar su condición socioeconómica o su grado de marginación social; y contribuir así, a su
+                    bienestar
+                    y al desarrollo de Argentina. <br>
                     <br>
                     <span class="spaninfo">VISIÓN</span>
                     <br> Ser la Institución líder en asistencia, docencia, investigación y rehabilitación de
@@ -292,7 +294,9 @@
 
         <div class="bloqueFooter">
             <div class="bloqueFooter__logo">
-                <img src="/Images/Logo.png" alt="Logofooter" loading="lazy">
+                <a href="/index.html">
+                    <img src="/Images/Logo.png" alt="Logofooter" loading="lazy">
+                </a>
             </div>
 
             <div class="bloqueFooter__contacto">
@@ -317,8 +321,8 @@
             <div class="bloqueFooter__RRSS">
                 <h3>Nuestras <br> redes sociales</h3>
                 <div class="icons">
-                    
-                        <a target="_blank" href="https://www.facebook.com/"> <i class="fa-brands fa-facebook fa-xl"></i></a>
+
+                    <a target="_blank" href="https://www.facebook.com/"> <i class="fa-brands fa-facebook fa-xl"></i></a>
 
                     </i>
 
