--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -74,17 +74,17 @@
                     <legend class="formulario__legend"> Rellenar campos</legend>
                     <div class="formulario__label">
                         <label class="formulario__label__hijo" for="">Nombre</label>
-                        <input class="formulario__label__input" type="text" placeholder="Tu Nombre" required>
+                        <input class="formulario__label__input" type="text" placeholder="Alejandro Paredes" required>
                     </div>
 
                     <div class="formulario__label">
                         <label class="formulario__label__hijo" for="">Email</label>
-                        <input class="formulario__label__input" type="text" placeholder="Tu Email" required>
+                        <input class="formulario__label__input" type="text" placeholder="Alejo@outlook.com" required>
                     </div>
 
                     <div class="formulario__label">
                         <label class="formulario__label__hijo" for="">Telefono</label>
-                        <input class="formulario__label__input" type="tel" placeholder="Tu Telefono" required>
+                        <input class="formulario__label__input" type="tel" placeholder="+543519948321" required>
 
 
                     </div>
@@ -149,7 +149,7 @@
             </div>
 
             <div class="bloqueFooter__RRSS">
-                <h3>Nuestras <br> redes sociales</h3>
+                <h3>Nuestras Redes Sociales</h3>
                 <div class="icons">
 
                     <a target="_blank" href="https://www.facebook.com/"> <i class="fa-brands fa-facebook fa-xl"></i></a>
