--- a/Pages/especialidades.html
+++ b/Pages/especialidades.html
@@ -323,7 +323,7 @@
             </div>
 
             <div class="bloqueFooter__RRSS">
-                <h3>Nuestras <br> redes sociales</h3>
+                <h3>Nuestras Redes Sociales</h3>
                 <div class="icons">
                     
                     <a target="_blank" href="https://www.facebook.com/"> <i class="fa-brands fa-facebook fa-xl"></i></a>
