--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </h2>
 
                 <p>
-                    La Clínica Oftalmo Center; dedicada al diagnóstico , tratamiento y corrección
+                    La Clínica está dedicada al diagnóstico, tratamiento y corrección
                     quirúrgica de los problemas relacionados con la oftalmología, otorrinolaringología y cirugía
                     plástica; desde la alta dirección se compromete con la seguridad de sus pacientes y en
                     brindar
