--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -9,7 +9,7 @@
     <meta description="Para consultas y turnos en Onnis, completa el formulario con los datos indicados">
     <meta Keywords="contacto, Teléfono, Email, turno, consultas, informe, oftalmología, instituto">
     <title>Contacto</title>
-    <link rel="shortcut icon" href="../Images/Logo.png">
+    <link rel="shortcut icon" href="../Images/Icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/estilos.css">
