--- a/Pages/especialidades.html
+++ b/Pages/especialidades.html
@@ -8,7 +8,7 @@
     <meta description="Conocé nuestras especialiadades de la clínica de ojos ONNIS">
     <meta Keywords="especialidades, cataratas, glaucoma, retinoplatia, estrabismo, oftalmología">
     <title>Especialidades</title>
-    <link rel="shortcut icon" href="../Images/Logo.png">
+    <link rel="shortcut icon" href="../Images/Icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/estilos.css">
