--- a/Pages/obrasSociales.html
+++ b/Pages/obrasSociales.html
@@ -9,7 +9,7 @@
         description="Las siguientes entidades prestatarias de servicios de salud que se atienden en nuestra institución ONNIS, pueden sufrir alguna variación de cobertura. Aconsejamos consultar frecuentemente dicho estado">
     <meta Keywords="Obras sociales, Osde, APOS, GALEANO, swissmedical, FEDERADA SALUD">
     <title>Obras Sociales</title>
-    <link rel="shortcut icon" href="../Images/Logo.png">
+    <link rel="shortcut icon" href="../Images/Icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/estilos.css">
