--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -9,7 +9,7 @@
         description="Contamos con grandes profesionales dedicadados a la salud y al bienestar de sus ojos, podés solicitar turno con alguno de ellos">
     <meta Keywords="especialidades, retina, glaucoma, cataratas, oftalmología general, Vítreo">
     <title>Staff Médico</title>
-    <link rel="shortcut icon" href="../Images/Logo.png">
+    <link rel="shortcut icon" href="../Images/Icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/estilos.css">
