--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta description="Instituto privado ONNIS de gran calidad y servicios para el bienestar de nuestros ojos">
     <meta Keywords="oftalmología oftalmológicos clinica privada salud">
-    <title>Nuestra Clínica</title>
-    <link rel="shortcut icon" href="Images/Logo.png">
+        <title>Nuestra Clínica</title>
+        <link rel="shortcut icon" href="/Images/Icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/estilos.css">
