--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 
 <head>
@@ -22,8 +22,10 @@
     <header>
         <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
             <div class="container-fluid">
+                <div class="navbarBg__cont">
                 <a class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
                         alt="logoprincipal"></a>
+                    </div>      
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -71,7 +73,8 @@
         <div class="pruebaflex">
             <form class="formulario">
                 <fieldset class="formulario__fieldset">
-                    <legend class="formulario__legend"> Rellenar campos</legend>
+                    <legend class="formulario__legend">
+                        <h1>Rellenar campos</h1> </legend>
                     <div class="formulario__label">
                         <label class="formulario__label__hijo" for="">Nombre</label>
                         <input class="formulario__label__input" type="text" placeholder="Alejandro Paredes" required>
