--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -24,8 +24,10 @@
 
         <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
             <div class="container-fluid">
+                <div class="navbarBg__cont">
                 <a class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
                         alt="logoprincipal"></a>
+                    </div> 
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -161,7 +163,7 @@
                 <div class="col  d-flex justify-content-center">
                     <a target="_blank" href="../Pages/contacto.html">
                         <button type="button" class="btn btn-outline-light btn-lg btnFont">
-                            <h5>Solicitar Turno</h5>
+                            <h3>Solicitar Turno</h3>
                         </button>
                     </a>
                 </div>
