--- a/Pages/especialidades.html
+++ b/Pages/especialidades.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -22,8 +22,10 @@
 
         <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
             <div class="container-fluid">
+                <div class="navbarBg__cont">
                 <a class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
                         alt="logoprincipal"></a>
+                    </div> 
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
