--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -47,7 +47,7 @@
                                 <a class="navLink" href="../Pages/especialidades.html">Especialidades</a>
                             </li>
                             <li class="nav-item">
-                                <a class="navLink" href="../Pages/staff.html">Staff Medico</a>
+                                <a class="navLink" href="../Pages/staff.html">Staff Médico</a>
                             </li>
 
                             <li class="nav-item">
@@ -86,7 +86,7 @@
                     </div>
 
                     <div class="formulario__label">
-                        <label class="formulario__label__hijo" for="">Telefono</label>
+                        <label class="formulario__label__hijo" for="">Teléfono</label>
                         <input class="formulario__label__input" type="tel" placeholder="+543519948321" required>
 
 
@@ -140,7 +140,7 @@
                     </i> Luis de Tejeda 4315, Cerro de las Rosas</p>
 
                 <p> <i class="fas fa-map-marker-alt fa-xl">
-                    </i> Bv. San Juan 684, Nueva Cordoba</p>
+                    </i> Bv. San Juan 684, Nueva Córdoba</p>
 
             </div>
 
@@ -164,7 +164,7 @@
         </div>
         </div>
 
-        <p class="footerLegal">Vision Center S.A. © 2022</p>
+        <p class="footerLegal">Oftalmo Center S.A. © 2022</p>
 
     </footer>
 
