--- a/Pages/especialidades.html
+++ b/Pages/especialidades.html
@@ -47,7 +47,7 @@
                                 <a class="navLink" href="../Pages/especialidades.html">Especialidades</a>
                             </li>
                             <li class="nav-item">
-                                <a class="navLink" href="../Pages/staff.html">Staff Medico</a>
+                                <a class="navLink" href="../Pages/staff.html">Staff Médico</a>
                             </li>
 
                             <li class="nav-item">
@@ -104,8 +104,8 @@
 
                 <ul>
                     <li>
-                        Vision Borrosa </li>
-                    <li> Perdida de la Vision de Profundidad
+                        Visión Borrosa </li>
+                    <li> Perdida de la Visión de Profundidad
                     </li>
                     <li>Dificultad en el cambio de luz dentro de ambientes
                     </li>
@@ -149,8 +149,8 @@
 
                 <ul>
                     <li>
-                        Vision Doble </li>
-                    <li> Ojos que no se alinean en la misma direccion
+                        Visión Doble </li>
+                    <li> Ojos que no se alinean en la misma dirección
                     </li>
                     <li>Movimientos oculares descordinados
                     </li>
@@ -295,7 +295,7 @@
                     </i> Luis de Tejeda 4315, Cerro de las Rosas</p>
 
                 <p> <i class="fas fa-map-marker-alt fa-xl">
-                    </i> Bv. San Juan 684, Nueva Cordoba</p>
+                    </i> Bv. San Juan 684, Nueva Córdoba</p>
 
             </div>
 
@@ -318,7 +318,7 @@
             </div>
         </div>
 
-        <p class="footerLegal">Vision Center S.A. © 2022</p>
+        <p class="footerLegal">Oftalmo Center S.A. © 2022</p>
 
     </footer>
 
