--- a/Pages/obrasSociales.html
+++ b/Pages/obrasSociales.html
@@ -48,7 +48,7 @@
                                 <a class="navLink" href="../Pages/especialidades.html">Especialidades</a>
                             </li>
                             <li class="nav-item">
-                                <a class="navLink" href="../Pages/staff.html">Staff Medico</a>
+                                <a class="navLink" href="../Pages/staff.html">Staff Médico</a>
                             </li>
 
                             <li class="nav-item">
@@ -173,7 +173,7 @@
                     </i> Luis de Tejeda 4315, Cerro de las Rosas</p>
 
                 <p> <i class="fas fa-map-marker-alt fa-xl">
-                    </i> Bv. San Juan 684, Nueva Cordoba</p>
+                    </i> Bv. San Juan 684, Nueva Córdoba</p>
 
             </div>
 
@@ -196,7 +196,7 @@
             </div>
         </div>
 
-        <p class="footerLegal">Vision Center S.A. © 2022</p>
+        <p class="footerLegal">Oftalmo Center S.A. © 2022</p>
 
     </footer>
 
