--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <a class="navLink" href="/Pages/especialidades.html">Especialidades</a>
                             </li>
                             <li class="nav-item">
-                                <a class="navLink" href="Pages/staff.html">Staff Medico</a>
+                                <a class="navLink" href="Pages/staff.html">Staff Médico</a>
                             </li>
 
                             <li class="nav-item">
@@ -133,23 +133,19 @@
 
                 <p>
                     Somos una Clínica Oftalmológica con profesionales de excelencia dedicados al cuidado de la
-                    salud
-                    ocular, en constante formación y abocados a brindar un servicio especializado para cada
+                    salud ocular. Nos encontramos en constante formación y abocados a brindar un servicio especializado
+                    para cada
                     necesidad.
-                    Contamos con consultorios médicos y quirófanos equipados con tecnología de avanzada para
-                    ofrecer
-                    atención de alta complejidad a niños y adultos.
+                    A su vez, Contamos con consultorios médicos y quirófanos equipados con tecnología de avanzada para
+                    ofrecer atención de alta complejidad a niños y adultos.
                 </p>
                 <h4 class="subInfo">VALORES</h4>
                 <p>
                     Nuestros valores son excelencia y profesionalidad en lo que hacemos, para lo cual nos
-                    capacitamos
-                    constantemente e incorporamos la mejor aparatología. Queremos estar cerca de nuestros
-                    pacientes,
-                    estableciendo un vínculo que se sostiene en el respeto y el trato cordial. Nos importa estar
-                    en
-                    cada
-                    detalle, nos enfocamos en cuidar la salud ocular y mejorar la calidad de vida.
+                    capacitamos constantemente e incorporamos la mejor aparatología. Queremos estar cerca de nuestros
+                    pacientes, estableciendo un vínculo que se sostiene en el respeto y el trato cordial. Nos importa
+                    estar
+                    en cada detalle, nos enfocamos en cuidar la salud ocular y mejorar la calidad de vida.
                 </p>
 
 
@@ -166,9 +162,9 @@
                 </p>
 
             </div>
-           
 
-            <div class="infoNosotros__img" data-aos= "fade-zoom-in">
+
+            <div class="infoNosotros__img" data-aos="fade-zoom-in">
                 <img srcset="Images/Movil/NosotrosM.png 768w,
                 Images/Tablet/NosotrosT.png 1024w,
                 Images/Desktop/NosotrosD.png 1025w" alt="imagen-nosotros" loading="lazy">
@@ -184,48 +180,32 @@
                     La Clínica está dedicada al diagnóstico, tratamiento y corrección
                     quirúrgica de los problemas relacionados con la oftalmología, otorrinolaringología y cirugía
                     plástica; desde la alta dirección se compromete con la seguridad de sus pacientes y en
-                    brindar
-                    una
-                    atención oportuna y humanizada; a través del mejoramiento continuo de los procesos, el uso
-                    de
-                    tecnología de punta y el apoyo de un equipo humano competente, especializado y comprometido
-                    con
-                    los
-                    objetivos de la organización. Además, de velar por el cumplimiento de los requisitos
-                    aplicables
-                    a la
-                    organización; con el fin, de aumentar el nivel de satisfacción de nuestros usuarios y sus
+                    brindar una atención oportuna y humanizada; a través del mejoramiento continuo de los procesos, el
+                    uso de tecnología de punta y el apoyo de un equipo humano competente, especializado y comprometido
+                    con los objetivos de la organización. Además, de velar por el cumplimiento de los requisitos
+                    aplicables a la organización; con el fin, de aumentar el nivel de satisfacción de nuestros usuarios y sus
                     familiares, socios, colaboradores y demás partes interesadas. </p>
 
 
                 <h4 class="subInfo">NECESIDADES OFTALMOLÓGICAS</h4>
                 <p>
                     La Institución está preparada para atender las necesidades oftalmológicas prioritarias de
-                    los
-                    usuarios tales como: heridas oculares, glaucoma agudo, desprendimiento de retina,
-                    endoftalmitis,
-                    uveitis aguda, oclusión de la arteria o de la vena central de la retina y hemorragia vítrea
-                    y
-                    las
-                    demás necesidades de consulta oftalmológica, optometría y ortóptica. Se atienden igualmente
+                    los usuarios tales como: heridas oculares, glaucoma agudo, desprendimiento de retina,
+                    endoftalmitis, uveitis aguda, oclusión de la arteria o de la vena central de la retina y hemorragia vítrea
+                    y las demás necesidades de consulta oftalmológica, optometría y ortóptica. Se atienden igualmente
                     necesidades quirúrgicas como: cirugía de catarata por facoemulsificacion y extracapsulares,
-                    cirugías
-                    de retina, cirugías de vítreo, cirugías de glaucoma, implantes de válvulas, cirugías de
-                    estrabismos
-                    y cirugía de párpados. Contamos además con un grupo de Cirujanos Oculoplásticos, para
-                    realizar
-                    frontoplástias, blefaroplástias y resolver problemas relacionados con reconstrucción de
-                    órbita o
-                    desfiguraciones faciales, debido a algún tipo de accidente. Además contamos con todo lo
-                    relacionado
-                    en la especialidad de Otorrinolaringología y consulta de cirugía plástica, estética y
+                    cirugías de retina, cirugías de vítreo, cirugías de glaucoma, implantes de válvulas, cirugías de
+                    estrabismos y cirugía de párpados. Contamos además con un grupo de Cirujanos Oculoplásticos, para
+                    realizar frontoplástias, blefaroplástias y resolver problemas relacionados con reconstrucción de
+                    órbita o desfiguraciones faciales, debido a algún tipo de accidente. Además contamos con todo lo
+                    relacionado en la especialidad de Otorrinolaringología y consulta de cirugía plástica, estética y
                     reconstructiva.
                 </p>
 
 
             </div>
 
-            <div class="infoNosotros__img2" data-aos="fade-zoom-in" >
+            <div class="infoNosotros__img2" data-aos="fade-zoom-in">
                 <img srcset="Images/Movil/PoliticaM.png 768w,
                 Images/Tablet/PoliticaT.png 1024w,
                 Images/Desktop/PoliticaD.png 1025w" alt="imagen-nosotros" loading="lazy">
@@ -234,50 +214,51 @@
 
         </section>
 
-            <section class="container-sm contenedorValoraciones" id="testimonios" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <section class="container-sm contenedorValoraciones" id="testimonios" data-aos="fade-up"
+            data-aos-anchor-placement="top-bottom">
 
-                <h2>Testimonios de Nuestros pacientes</h2>
+            <h2>Testimonios de Nuestros pacientes</h2>
 
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner valoracion">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner valoracion">
 
-                        <div class="carousel-item active" data-bs-interval="2500">
-                            <div class="valoracion__texto">
-                                <p>
-                                    Excelente atención, cordialidad, dinámico a la hora de dar una respuesta muy
-                                    profesionales! Un staff de profesionales de primer nivel. Equipamiento con
-                                    tecnología de punta. Realmente para recomendar!
-                                    <span class="valoracion__cita"> hugo valdez</span>
-                                </p>
-                            </div>
+                    <div class="carousel-item active" data-bs-interval="2500">
+                        <div class="valoracion__texto">
+                            <p>
+                                Excelente atención, cordialidad, dinámico a la hora de dar una respuesta muy
+                                profesionales! Un staff de profesionales de primer nivel. Equipamiento con
+                                tecnología de punta. Realmente para recomendar!
+                                <span class="valoracion__cita"> Hugo Valdéz</span>
+                            </p>
                         </div>
-
-                        <div class="carousel-item" data-bs-interval="2500">
-                            <div class="valoracion__texto">
-                                <p>
-                                    Desde mi lugar tengo que decir que fue excelente mi experiencia, cada vez que
-                                    tuve consulta y el día de la cirugía. Muy profesionales todos por eso los elegí para
-                                    resolver mi inconveniente de lagrimal. Muchas Gracias.
-                                    <span class="valoracion__cita"> Gabriela Salazar</span>
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="carousel-item">
-                            <div class="valoracion__texto" data-bs-interval="2500">
-                                <p>
-                                    A unas semanas de mi cirugía estoy muy contenta, ya que no he presentado molestias
-                                    post operatorias, veo los resultados muy naturales y no tuve inflamación. Gracias
-                                    por la buena atención por parte de todo el personal de la clínica.
-                                    <span class="valoracion__cita"> Diego Martinez</span>
-                                </p>
-                            </div>
-                        </div>
-
                     </div>
-                </div>
 
-            </section>
+                    <div class="carousel-item" data-bs-interval="2500">
+                        <div class="valoracion__texto">
+                            <p>
+                                Desde mi lugar tengo que decir que fue excelente mi experiencia, cada vez que
+                                tuve consulta y el día de la cirugía. Muy profesionales todos por eso los elegí para
+                                resolver mi inconveniente de lagrimal. Muchas Gracias.
+                                <span class="valoracion__cita"> Gabriela Salazar</span>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="valoracion__texto" data-bs-interval="2500">
+                            <p>
+                                A unas semanas de mi cirugía estoy muy contenta, ya que no he presentado molestias
+                                post operatorias, veo los resultados muy naturales y no tuve inflamación. Gracias
+                                por la buena atención por parte de todo el personal de la clínica.
+                                <span class="valoracion__cita"> Diego Martinez</span>
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
 
 
         <div class="whatsaapIcon container-fluid">
@@ -304,7 +285,7 @@
                     </i> Luis de Tejeda 4315, Cerro de las Rosas</p>
 
                 <p> <i class="fas fa-map-marker-alt fa-xl">
-                    </i> Bv. San Juan 684, Nueva Cordoba</p>
+                    </i> Bv. San Juan 684, Nueva Córdoba</p>
 
             </div>
 
@@ -327,7 +308,7 @@
             </div>
         </div>
 
-        <p class="footerLegal">Vision Center S.A. © 2022</p>
+        <p class="footerLegal">Oftalmo Center S.A. © 2022</p>
 
     </footer>
 
