--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -49,7 +49,7 @@
                                 <a class="navLink" href="../Pages/especialidades.html">Especialidades</a>
                             </li>
                             <li class="nav-item">
-                                <a class="navLink" href="../Pages/staff.html">Staff Medico</a>
+                                <a class="navLink" href="../Pages/staff.html">Staff Médico</a>
                             </li>
 
                             <li class="nav-item">
@@ -157,7 +157,7 @@
             <div class="row styleRow">
                 <div class="col">
 
-                    <h2> Atencion las 24hs</h2>
+                    <h2> Atención las 24hs</h2>
 
                 </div>
                 <div class="col  d-flex justify-content-center">
@@ -194,7 +194,7 @@
                     </i> Luis de Tejeda 4315, Cerro de las Rosas</p>
 
                 <p> <i class="fas fa-map-marker-alt fa-xl">
-                    </i> Bv. San Juan 684, Nueva Cordoba</p>
+                    </i> Bv. San Juan 684, Nueva Córdoba</p>
 
             </div>
 
@@ -217,7 +217,7 @@
             </div>
         </div>
 
-        <p class="footerLegal">Vision Center S.A. © 2022</p>
+        <p class="footerLegal">Oftalmo Center S.A. © 2022</p>
 
     </footer>
 
